Allowed project to run under Java 17. Updated some dependencies.