@@ -2,13 +2,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- For publishing to sonatype / central maven repo -->
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>7</version>
-    </parent>
-
     <groupId>net.finmath</groupId>
     <artifactId>finmath-smart-derivative-contract</artifactId>
     <version>0.1.7-SNAPSHOT</version>
@@ -24,13 +17,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <src.main.java.dir>src/main/java</src.main.java.dir>
         <src.test.java.dir>src/test/java</src.test.java.dir>
+        <java.version>17</java.version>
         <src.main.kotlin.dir>src/main/kotlin</src.main.kotlin.dir>
         <src.test.kotlin.dir>src/test/kotlin</src.test.kotlin.dir>
         <kotlin.version>1.2.0</kotlin.version>
         <junit.jupiter.version>5.5.2</junit.jupiter.version>
         <finmath-lib.version>5.0.6</finmath-lib.version>
         <finmath-lib-plot-extensions.version>0.0.6</finmath-lib-plot-extensions.version>
-        <spring-statemachine.version>2.0.2.RELEASE</spring-statemachine.version>
+        <spring-statemachine.version>3.2.0</spring-statemachine.version>
     </properties>
 
     <developers>
@@ -106,18 +100,6 @@
             <version>${kotlin.version}</version>
         </dependency>
 
-        <!-- finnmath lib -->
-        <dependency>
-            <groupId>net.finmath</groupId>
-            <artifactId>finmath-lib</artifactId>
-            <version>${finmath-lib.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.finmath</groupId>
-            <artifactId>finmath-lib-plot-extensions</artifactId>
-            <version>${finmath-lib-plot-extensions.version}</version>
-        </dependency>
-
         <!--Spring State Machine -->
         <dependency>
             <groupId>org.springframework.statemachine</groupId>
@@ -138,6 +120,30 @@
             <version>1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jcommon</artifactId>
+            <version>1.0.24</version>
+        </dependency>
+
+        <!-- finnmath lib -->
+        <dependency>
+            <groupId>net.finmath</groupId>
+            <artifactId>finmath-lib</artifactId>
+            <version>${finmath-lib.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.finmath</groupId>
+            <artifactId>finmath-lib-plot-extensions</artifactId>
+            <version>${finmath-lib-plot-extensions.version}</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -147,15 +153,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jfree</groupId>
-            <artifactId>jfreechart</artifactId>
-            <version>1.0.19</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <version>2.9.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
@@ -166,14 +166,24 @@
         </dependency>
 
         <dependency>
-            <groupId>com.fasterxml.jackson.dataformat</groupId>
-            <artifactId>jackson-dataformat-csv</artifactId>
-            <version>2.11.1</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.13.4</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.12.6.1</version>
+            <version>2.13.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.13.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-csv</artifactId>
+            <version>2.11.1</version>
         </dependency>
 
         <!-- Spring boot -->
@@ -181,7 +191,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.0.9.RELEASE</version>
+            <version>2.7.3</version>
         </dependency>
 
     </dependencies>
@@ -195,7 +205,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.10.1</version>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
@@ -206,7 +216,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -220,7 +230,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>3.4.1</version>
                 <configuration>
                     <doctitle>${project.name} (${project.version}) documentation</doctitle>
                     <stylesheetfile>stylesheet.css</stylesheetfile>
@@ -330,7 +340,17 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.3</version>
                 <configuration>
+                    <jvmArguments>--add-opens java.base/java.time=ALL-UNNAMED</jvmArguments>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <rules><dependencyConvergence/></rules>
                 </configuration>
             </plugin>
         </plugins>
